# julia-cpp-memory-management

./: .gitignore  CMakeLists.txt  README.md  cpp_pointers.cpp  presentation.md
MyJuliaLib/: CMakeLists.txt  Project.toml  README.md
MyJuliaLib/src/: MyJuliaLib.jl  trapz.jl
MyJuliaLib/test/: runtests.jl
include/: greedy_shared_ptr.h  my_shared_ptr.h
mixedlib/: CMakeLists.txt  Makefile
mixedlib/cmake/: FindGoogleTest.cmake  FindJulia.cmake
mixedlib/include/: aux.h  common.h  shared_trapz.h  trapz.h
mixedlib/src/: shared_trapz.cpp  trapz.cpp
mixedlib/tests/: CMakeLists.txt  test_common.cpp  test_shared_trapz.cpp  test_trapz.cpp
mymemory/: CMakeLists.txt  CMakeLists.txt.bkp  config.h.in
mymemory/cmake/: FindGoogleTest.cmake  mymemory-config.cmake.in
mymemory/include/mymemory/: greedy_shared_ptr.h  julia_shared_ptr.h  my_shared_ptr.h
mymemory/tests/: CMakeLists.txt  test_mymemory.cpp
